Fix g_mutex and g_cond update syntax

It seems like the update was not implemented properly. Correcting
syntax should address this issue

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=742157